--- a/ReHouse.FrontEnd/Scripts/js-image-slider.css
+++ b/ReHouse.FrontEnd/Scripts/js-image-slider.css
@@ -1,16 +1,114 @@
-#sliderFrame, #sliderFrame div {
+/*#sliderFrame, #sliderFrame div {
     box-sizing: content-box;
 }
 
 #sliderFrame 
 {
     
-    margin: 0 auto; /*center-aligned*/
+    margin: 0 auto; 
     margin-bottom:97px;
 }
   
 #slider, #slider .sliderInner {
-   height:702px;/* Must be the same size as the slider images */
+   height:702px;
+    border-radius: 6px;
+}
+
+#slider {
+    background-color:white;
+    position:relative;
+    transform: translate3d(0,0,0);
+    box-shadow: 0px 1px 5px #999999;
+}
+
+#slider a.imgLink, #slider .video
+{
+    z-index:2;
+    cursor:pointer;
+    position:absolute;
+    top:0px;left:0px;border:0;padding:0;margin:0;
+    width:100%;height:100%;
+}
+#slider .video {
+    background:transparent url(video.png) no-repeat 50% 50%;
+}
+
+#slider .navBulletsWrapper  {
+    top: 667px;
+    background: none;
+    position: absolute;
+    z-index: 3;
+    display: flex!important;
+    left: 50%;
+    margin-left: -46px;
+}
+
+#slider .navBulletsWrapper div 
+{
+    width:11px; height:11px;
+    font-size:0;color:White;
+    background:transparent url(bullet.png) no-repeat 0 0;
+    display:inline-block; *display:inline; zoom:1;
+    overflow:hidden;cursor:pointer;
+    margin:0 6px;
+}
+
+#slider .navBulletsWrapper .active {background-position:0 -11px;}
+
+
+
+#slider img, #slider>b, #slider a>b {
+    position:absolute; border:none; display:none;
+}
+
+
+#slider .sliderInner {
+    overflow:hidden;
+    position:absolute; top:0; left:0;
+}
+
+
+#slider .sliderInner div {
+    
+}
+
+
+
+#slider>a, #slider video, #slider audio {display:none;}
+#slider div {
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);             
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    display: block!important;
+}
+
+
+
+
+
+
+element.style {
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+}
+    */
+
+
+#sliderFrame, #sliderFrame div {
+    box-sizing: content-box;
+}
+
+#sliderFrame 
+{
+    width:100%;
+    height:702px;
+    margin: 0 auto; /*center-aligned*/
+}
+  
+#slider, #slider .sliderInner {
+    width:100%;height:702px;/* Must be the same size as the slider images */
     border-radius: 6px;
 }
 
@@ -28,7 +126,7 @@
     cursor:pointer;
     position:absolute;
     top:0px;left:0px;border:0;padding:0;margin:0;
-    width:100%;height:100%;
+    width:100%;height:702px;
 }
 #slider .video {
     background:transparent url(video.png) no-repeat 50% 50%;
@@ -36,14 +134,11 @@
 
 /* ------ built-in navigation bullets wrapper ------*/
 #slider .navBulletsWrapper  {
-    top: 667px;
-    /* text-align: center; */
-    background: none;
-    position: absolute;
-    z-index: 3;
-    display: flex!important;
-    left: 50%;
-    margin-left: -46px;
+    top:660px;
+    text-align:center;
+    background:none;
+    position:relative;
+    z-index:3;
 }
 
 /* each bullet */
@@ -64,16 +159,16 @@
 #slider img, #slider>b, #slider a>b {
     position:absolute; border:none; display:none;
 }
-#slider img {
-    width:100%!important;
-    object-fit:cover!important;
-    height:600px!important;
-}
 
 #slider .sliderInner {
     overflow:hidden;
     position:absolute; top:0; left:0;
 }
+#slider .sliderInner div {
+    height:702px!important;
+    background-size:cover!important;
+}
+
 
 #slider>a, #slider video, #slider audio {display:none;}
 #slider div {
@@ -81,8 +176,7 @@
     transform: translate3d(0,0,0);             
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    display: block!important;
 }
-/*#slider .mcSlc {
-    background:none!important;
-}*/
+
+#slider .inslider {
+}
