--- a/ReHouse.FrontEnd/Scripts/js-image-slider.css
+++ b/ReHouse.FrontEnd/Scripts/js-image-slider.css
@@ -105,6 +105,7 @@ element.style {
     width:100%;
     height:702px;
     margin: 0 auto; /*center-aligned*/
+    margin-bottom:97px;
 }
   
 #slider, #slider .sliderInner {
