messenger, filters, slider text

--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Managers/Add.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Managers/Add.cshtml
@@ -49,6 +49,10 @@
                         <td>@Html.TextBoxFor(m => m.FatherName)</td>
                     </tr>
                     <tr>
+                        <td>Имя в Messenger:</td>
+                        <td>@Html.TextBoxFor(m => m.MessengerName)</td>
+                    </tr>  
+                    <tr>
                         <td>Позиция сортировки:</td>
                         <td>@Html.TextBoxFor(m => m.OrderByField, new { @type = "number" })</td>
                     </tr>
