--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Managers/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Managers/Edit.cshtml
@@ -57,7 +57,11 @@
                     <tr>
                         <td>Отчество:</td>
                         <td>@Html.TextBoxFor(m => m.FatherName)</td>
-                    </tr>                    
+                    </tr>    
+                    <tr>
+                        <td>Имя в Messenger:</td>
+                        <td>@Html.TextBoxFor(m => m.MessengerName)</td>
+                    </tr>                  
                     @*<tr>
                         <td>О себе:</td>
                         <td>@Html.TextAreaFor(m => m.About, new { @rows = "4" })</td>
