--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
@@ -6,7 +6,7 @@
 {
     var session = Session["user"] as SessionModel;
 
-    <script>
+    @*<script>
     function rentTypeChanged() {
         var type = $('#rent_type').val();
         if (type == 1) {
@@ -21,7 +21,7 @@
             $('#price_max2').show();
         }
     }
-    </script>
+    </script>*@
 
     <div class="selection-admin">
         <div class="typeofproperty">
@@ -48,134 +48,12 @@
         </div>
 
         <div class="_cost">
-            @if (ViewBag.Type == AdvertsType.Sale)
-            {
-                <select id="price">
-                    @*<option selected value="0">Цена от</option>*@
-                    @foreach (var price in Model.Prices)
-                    {
-                        <option value="@price.Min">от @price.Min $</option>
-                        @*if (i == 0)
-                        {
-                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
-                        }
-                        else if (i == Model.Prices.Count - 1)
-                        {
-                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
-                        }
-                        else
-                        {
-                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
-                        }*@
-                    }
-                </select>
-                <select id="price_max">
-                    @*<option selected value="0">Цена до</option>*@
-                    @foreach (var price in Model.Prices)
-                    {
-
-                        <option value="@price.Min">до @price.Min $</option>
-                        @*if (i == 0)
-                        {
-                            <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
-                        }
-                        else if (i == Model.Prices.Count - 1)
-                        {
-                            <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
-                        }
-                        else
-                        {
-                            <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
-                        }*@
-                    }
-
-                </select>
-            }
-            else if (ViewBag.Type == AdvertsType.Rent)
-            {
-                <select id="price">
-                    @*<option selected value="0">Цена от</option>*@
-                    @foreach (var price in Model.Prices.Where(x => x.Currency == "uah"))
-                    {
-
-                        <option value="@price.Min">от @price.Min грн</option>
-                        @*if (i == 0)
-                        {
-                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
-                        }
-                        else if (i == Model.Prices.Count - 1)
-                        {
-                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
-                        }
-                        else
-                        {
-                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
-                        }*@
-                    }
-                </select>
-                <select id="price_max">
-                    @*<option selected value="0">Цена до</option>*@
-                    @foreach (var price in Model.Prices.Where(x => x.Currency == "uah"))
-                    {
-
-                        <option value="@price.Min"> до @price.Min грн</option>
-                        @*if (i == 0)
-                        {
-                            <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн/мес</option>
-                        }
-                        else if (i == Model.Prices.Count - 1)
-                        {
-                            <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min грн/мес</option>
-                        }
-                        else
-                        {
-                            <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max грн/мес</option>
-                        }*@
-                    }
-                </select>
-
-                <select id="price2" style="display:none;">
-                    @*<option selected value="0">Цена от</option>*@
-                    @foreach (var price in Model.Prices.Where(x => x.Currency == "usd"))
-                    {
-
-                        <option value="@price.Min">от @price.Min $</option>
-                        @*if (i == 0)
-                        {
-                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
-                        }
-                        else if (i == Model.Prices.Count - 1)
-                        {
-                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
-                        }
-                        else
-                        {
-                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
-                        }*@
-                    }
-                </select>
-                <select id="price_max2" style="display:none;">
-                    @*<option selected value="0">Цена до</option>*@
-                    @foreach (var price in Model.Prices.Where(x => x.Currency == "usd"))
-                    {
-
-                        <option value="@price.Min"> до @price.Min $</option>
-                        @*if (i == 0)
-                        {
-                            <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн/мес</option>
-                        }
-                        else if (i == Model.Prices.Count - 1)
-                        {
-                            <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min грн/мес</option>
-                        }
-                        else
-                        {
-                            <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max грн/мес</option>
-                        }*@
-                    }
-                </select>
-
-            }
+            <div>
+                <input id="price" type="number" placeholder="от" />
+            </div>
+            <div>
+                <input id="price_max" type="number" placeholder="до" />
+            </div>
         </div>
         @if (ViewBag.Type == AdvertsType.Rent)
         {
@@ -188,7 +66,7 @@
         </div>
         }
 
-        @if (Model.TrimConditions != null)
+        @if (Model.TrimConditions != null && ViewBag.Type != AdvertsType.Rent)
         {
             <div class="trimcondition">
                 <select id="trimcondition">
