--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Texts/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Texts/Edit.cshtml
@@ -30,7 +30,7 @@
                     </tr>
                     <tr>
                         <td>Текст:</td>
-                        <td>@Html.TextAreaFor(m => m.Description, new { @rows = "30", @cols = "30" })</td>
+                        <td>@Html.TextAreaFor(m => m.Description, new { @rows = "30", @cols = "30", @id = "wyiswyg" })</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -41,3 +41,10 @@
         </form>
     </div>
 </div>
+@section scripts {
+    <script>
+        $(function () {
+            $("textarea#wyiswyg").jqte();
+        });
+    </script>
+}
