--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -180,13 +180,8 @@
                         <a class="video" href="@slide.Url" data-autovideo="1">
                             <b data-src="Content/images/4.png"></b>
                             <div class="inslider">
-                                <h3>27 жемчужина</h3>
-                                <h4>на каманина</h4>
-                                <h5>срок сдачи 3 квартал 2017</h5>
-                                <p>1 комн. квартра <span>28600$</span></p>
-                                <p>1 комн. квартра <span>28600$</span></p>
-                                <p>1 комн. квартра <span>28600$</span></p>
-                                <button>Подробнее</button>
+                                @slide.Text
+                               @* <button>Подробнее</button>*@
                             </div>
                         </a>
                     }
@@ -195,13 +190,8 @@
                         <div style="display:block!important;">
                             <img src="@Url.Content(slide.Url)">
                             <div class="inslider">
-                                <h3>27 жемчужина</h3>
-                                <h4>на каманина</h4>
-                                <h5>срок сдачи 3 квартал 2017</h5>
-                                <p>1 комн. квартра <span>2800$</span></p>
-                                <p>1 комн. квартра <span>2600$</span></p>
-                                <p>1 комн. квартра <span>2860$</span></p>
-                                <button>Подробнее</button>
+                                @slide.Text
+                                @*<button>Подробнее</button>*@
                             </div>
                         </div>
                     }
