--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -187,14 +187,14 @@
             <div class="h3cost">
                 @if (Model.Advert.RentPeriodType == RentPeriodType.Daily)
                 {
-                    <p class="grn">@Model.Advert.Price грн/сутки</p>
+                    <p class="grn">@Model.Advert.Price.ToString("# ### ##0") грн/сутки</p>
                 }
                 else
                 {
-                    <p class="grn">@Model.Advert.Price $/мес</p>
+                    <p class="grn">@Model.Advert.Price.ToString("# ### ##0") $/мес</p>
                 }
                 <pre></pre>
-                <p class="dot">·</p>
+                <p class="dot">/</p>
 
                 @*@if (ViewBag.USD != 0)
                     {
