--- a/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdvertsCarousel.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdvertsCarousel.cshtml
@@ -38,7 +38,7 @@
                             <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>@(item.AdvertPropertyValues.Any(x => x.AdvertPropertyId == 7) ? item.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 7).PropertiesValue : "0") м²</p></div>
                         </div>
                         <div class="bottom">
-                            <div><p class="cost">@item.Price $</p></div>
+                            <div><p class="cost">@item.Price.ToString("# ### ##0") $</p></div>
                             <div class="share" tabindex="0" onclick="share(this, event);"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"></div>
                             <div class="shared_icons">
@@ -82,11 +82,11 @@
                         <div class="bottom">
                             @if (item.RentPeriodType == ReHouse.Utils.Helpers.RentPeriodType.Daily)
                             {
-                                <div><p class="cost">@item.Price грн</p></div>
+                                <div><p class="cost">@item.Price.ToString("# ### ##0") грн</p></div>
                             }
                             else
                             {
-                                <div><p class="cost">@item.Price $</p></div>
+                                <div><p class="cost">@item.Price.ToString("# ### ##0") $</p></div>
                             }
                             <div class="share" tabindex="0" onclick="share(this, event);"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"></div>
