--- a/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildingsCarousel.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildingsCarousel.cshtml
@@ -37,7 +37,7 @@
                         <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>0 м²</p></div>
                     </div>
                     <div class="bottom">
-                        <div><p class="cost">от @item.Price грн/м²</p></div>
+                        <div><p class="cost">от @item.Price.ToString("# ### ##0") грн/м²</p></div>
                         <div class="share" tabindex="0" onclick="share(this, event);"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                         <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this, event);"></div>
                         <div class="shared_icons">
