--- a/ReHouse.FrontEnd/Views/Shared/Search/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Search/_listOfAdverts.cshtml
@@ -37,7 +37,7 @@
                             <div><img src="/Content/images/m21.png" height="32" alt=""><p>@item.Square м²</p></div>
                         </div>
                         <div class="bottom">
-                            <div><p class="cost">@item.Price $</p></div>
+                            <div><p class="cost">@item.Price.ToString("# ### ##0") $</p></div>
                             <div class="share" onclick="share(this, event);"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"></div>
                             <div class="shared_icons">
@@ -80,11 +80,11 @@
                         <div class="bottom">
                             @if (item.RentPeriodType == ReHouse.Utils.Helpers.RentPeriodType.Daily)
                             {
-                                <div><p class="cost">@item.Price грн</p></div>
+                                <div><p class="cost">@item.Price.ToString("# ### ##0") грн</p></div>
                             }
                             else
                             {
-                                <div><p class="cost">@item.Price $</p></div>
+                                <div><p class="cost">@item.Price.ToString("# ### ##0") $</p></div>
                             }
                             <div class="share" onclick="share(this, event)" onblur="leaveShare(this, event)"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"></div>
@@ -126,7 +126,7 @@
                                 <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>0 м²</p></div>*@
                         </div>
                         <div class="bottom">
-                            <div><p class="cost">от @item.Price грн/м²</p></div>
+                            <div><p class="cost">от @item.Price.ToString("# ### ##0") грн/м²</p></div>
                             <div class="share" onclick="share(this, event);"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                             <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this, event);"></div>
                             <div class="shared_icons">
