--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -184,8 +184,8 @@
             <h4><img src="/Content/images/pin.png" height="13" alt="">@Model.Advert.Street</h4>
             <div class="h3cost">
                 <p class="grn">@Model.Advert.Price.ToString("# ### ##0") $</p>
-                <pre></pre>
-                <p class="dot">·</p>
+                <pre> </pre>
+                <p class="dot">/</p>
 
                 @*@if (ViewBag.USD != 0)
                     {
