--- a/ReHouse.FrontEnd/Views/Cart/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Cart/Index.cshtml
@@ -18,7 +18,7 @@
 
     @if (!ViewBag.NoElements)
     {
-        <div class="othernovostroy">
+        <div class="products">
             <ul class="prods" id="data-container">
 
                 @Html.Partial("Cart/_listOfAdverts", Model.Adverts);
