--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -288,7 +288,7 @@
             </div>
             <div class="contactinfo">
                 <div class="feedback">
-                    <a href="/email/" id="blink1"></a>
+                    <a href="/email/" id="popup__toggle"><div class="circlephone" style="transform-origin: center;"></div><div class="circle-fill" style="transform-origin: center;"></div><div class="img-circle" style="transform-origin: center;"><div class="img-circleblock" style="transform-origin: center;"></div></div></a>
                     <a href="/cart/" id="fav1"></a>
                 </div>
                 <div class="tel">
