--- a/ReHouse.FrontEnd/Content/mobile.css
+++ b/ReHouse.FrontEnd/Content/mobile.css
@@ -2064,6 +2064,11 @@
     .container {
         max-width: 320px;
     }
+    /*.container {
+    width: 100%;
+    margin: auto;
+    max-width: 415px;
+}*/
 .news123 .content1 {
     margin-top: 30px;
     margin-bottom: 80px;
@@ -2116,7 +2121,9 @@
         }
 
     .d-carousel h2 {
-        margin-top: 15px;
+          margin-top: 45px;
+          margin-bottom: 15px;
+              font-size: 20px;
     }
 
     .d-carousel .jcarousel-container-horizontal {
@@ -2129,7 +2136,7 @@
     }
 
     .news {
-        width: 320px;
+        width: 310px;
     }
 
         .news .firstnews {
@@ -2160,8 +2167,8 @@
     font-size: 20px;
 }
     #toTop {
-        bottom: 10px;
-        right: -5px;
+        bottom: 148px;
+    right: 25px;
     }
 
     .footer .social {
@@ -2306,12 +2313,15 @@
 
     .header_mobile .header .logo {
         margin-top: 5px;
-        margin-left: 31%;
+        margin-left: 34%;
     }
-
+.hidden-menu-ticker:checked ~ .btn-menu {
+    left: 54%;
+}
     .share_icons {
         width: 135px;
         margin-left: 94.5px;
+        margin-bottom: 10px;
     }
 
     .seotext3 {
@@ -2351,6 +2361,8 @@
 
     .news1 .morenews1 #more {
         margin-left: 0;
+        width: 320px;
+        font-size: 16px;
     }
 
     .about_company {
@@ -2368,6 +2380,7 @@
             object-fit: contain;
             width: 315px;
             height: 455px;
+            margin-bottom: 10px;
         }
 
     .table_of_prodapart table {
@@ -2442,10 +2455,11 @@
         }
 
     .streak {
-        width: 103%;
-        margin-left: 0;
+        display:none;
     }
-
+#testimonials {
+    margin-bottom: 90px;
+}
     .h2novostroy .favorite {
         position: relative;
         top: 0;
@@ -2468,10 +2482,20 @@
     .seotext3 {
         margin-top: 20px;
     }
-
-
-
-
+.d-carousel .jcarousel-next-horizontal {
+    top: 180px;
+    right: 0px;
+}
+.d-carousel .jcarousel-prev-horizontal {
+    top: 180px;
+    right: 295px;
+}
+.news1 h2 {
+    font-size: 20px;
+}
+.h23 h2 {
+    font-size: 20px;
+}
 
 .inner-testimonial {
     width: 320px;
@@ -2498,7 +2522,7 @@
     left: 118px;
 }
     .news .img {
-    width: 450px;
+    width: 310px;
     height: 250px;
 }
     .news .h4 {
@@ -2514,16 +2538,16 @@
     display: flex;
     flex-direction: row;
     position: absolute;
-        top: 292px;
-    width: 315px;
+        top: 298px;
+    width: 305px;
     border-top: 1px solid #e5e5f8;
 }
 .d-carousel ul li:hover .bottom {
-        top: 290px;
+        top: 294px;
         transition:.8s ease;
     }
 .shared_icons {
-    margin-left: 35px;
+    margin-left: 31px;
 }
 .d-carousel .jcarousel-item {
     width: 305px;
@@ -2541,7 +2565,7 @@
     -o-object-fit: cover;
     object-fit: cover;
     position: absolute;
-    top: 117px;
+    top: 107px;
     width: 305px;
         height: 140px;
 }
@@ -2551,7 +2575,10 @@
 .d-carousel .redimg {
     position: absolute;
     z-index: 10000;
-    margin-top: 86px;
+    margin-top: 82px;
+}
+.d-carousel h3 {
+    margin-top: 14px;
 }
 .d-carousel ul li .meters div {
     padding: 0 35px 0 10px;
@@ -2563,6 +2590,179 @@
 .news123 .content1 .img {
     display: none;
 }
+.wrapper-prod .right {
+    padding: 32px 5px 0px 5px;
+}
+.wrapper-prod .fav-wrap {
+    display: flex;
+    flex-direction: column;
+}
+.wrapper-prod .fav-wrap div {
+    margin: 10px 0;
+}
+.h23 h2 {
+    margin-bottom: 20px;
+    text-align: center;
+}
+.seotext3 .meters div {
+    display: flex;
+    flex-direction: row;
+    padding: 0 19px 0 10px;
+}
+.about_company p {
+    font-size: 15px;
+    line-height: 22px;
+}
+.footer .bottomnav a {
+    font-size: 18px;
+    margin-bottom: 20px;
+    display: block;
+}
+.footer .social {
+    margin-top: 0px;
+        margin: auto;
+}
+.footer .bottomnav {
+        margin: auto;
+    margin-top: 30px;
+}
+
+/**/
+.products .prods li .meters div {
+    display: flex;
+    flex-direction: row;
+    padding: 0 30px 0 10px;
+}
+.products .prods li {
+    width: 305px;
+    height: 365px;
+    margin:auto;
+}
+.products .prods li:hover .bottom {
+    top:290px;
+}
+    .products .prods .data-item {
+        margin-bottom: 15px;
+    }
+.products .prods {
+    width: 305px;
+    margin-left: 0px;
+    margin:auto;
+}
+.products .prods .redimg {
+    position: absolute;
+    z-index: 10000;
+    margin-top: 82px;
+        margin-left: 157px;
+}
+.products .prods h3 {
+    margin-top: 14px;
+}
+.products .prods li img.main-img {
+    -o-object-fit: cover;
+    object-fit: cover;
+    position: absolute;
+    top: 107px;
+    width: 305px;
+    height: 140px;
+}
+.products .prods li .meters {
+    top: 258px;
+}
+.products .prods li .bottom {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    top: 292px;
+    width: 305px;
+    border-top: 1px solid #e5e5f8;
+}
+.products .prods li .bottom p.cost {
+     border: none; 
+     font-size: 18px;
+    font-weight: 700;
+    color: #114a82;
+    padding: 25px 0 22px 12px;
+}
+ .map_website a {
+    font-size: 15px;
+    line-height: 26px;
+}
+.table_of_prodapart table {
+    font-size: 14px;
+    line-height: 22px;
+}
+#mapnovostroy1 {
+    margin-left: 8px;
+}
+
+
+
+.news12 {
+    width: 310px;
+}
+.news12 .firstnews {
+    width: 310px;
+}
+.news12 .content1, .content2 {
+    width: 310px;
+}
+.news12 .img {
+    width: 310px;
+    height: 250px;
+}
+.news12 .img img {
+    -o-object-fit: cover;
+    object-fit: cover;
+    width: 310px!important;
+}
+.news12 .h4 {
+    margin-left: 10px;
+}
+.news12 h4 {
+    width: 119px;
+}
+
+.news12 h3 {
+    width: 290px;
+    margin-left: 9px;
+}
+.news12 #data-container {
+    width: 310px;
+    margin:auto;
+}
+.cost {
+    font-size: 18px;
+}
+.d-carousel a#more {
+    margin-left: 5px;
+        padding: 2px 0px 2px 0px;
+    font-size: 15px;
+}
+.d-carousel h3 {
+    font-size: 20px;
+}
+.d-carousel ul li .bottom .share {
+    right: 72px;
+}
+.d-carousel ul li .bottom p.cost {
+    border-bottom: none;
+}
+.wrapper-footer {
+    height: 117%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #114a82;
+    width: 123%;
+    margin-left: -37px;
+}
+
 
 
 }
