--- a/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildingsCarousel.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildingsCarousel.cshtml
@@ -12,7 +12,7 @@
                 <div onclick="window.location='/newbuilding/detail/@item.Id'">
                     @if (item.IsExclusive)
                     {
-                        <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
+                        <div class="redimg"><img src="~/Content/images/eksklusiv.jpg"></div>
                     }
                     else if (item.IsHot)
                     {
