--- a/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdvertsCarousel.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdvertsCarousel.cshtml
@@ -13,7 +13,7 @@
                     <div onclick="window.location='/sale/detail/@item.Id'">
                         @if (item.IsExclusive)
                         {
-                            <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
+                            <div class="redimg"><img src="~/Content/images/eksklusiv.jpg"></div>
                         }
                         else if (item.IsHot)
                         {
