--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -51,17 +51,7 @@
     }
     @Styles.Render("~/Content/styleCss")
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="~/Content/mobile.css">
-
-    <!--New Styles-->
-    <link rel="stylesheet" href="~/Content/animate.css">
-    <link rel="stylesheet" href="~/Content/owl.carousel.min.css">
-    <link rel="stylesheet" href="~/Content/owl.theme.default.min.css">
-    <link rel="stylesheet" href="~/Content/font-awesome.min.css">
-    <link rel="stylesheet" href="~/Content/stylecomm.css">
-    <!--end new Styyles-->
-
-
+    @Styles.Render("~/Content/styleCss2")
 </head>
 <body>
     <div class="header">
@@ -356,34 +346,7 @@
         @Scripts.Render("~/Scripts/foundation")
         @Scripts.Render("~/Scripts/vendorJs")
         @Scripts.Render("~/Scripts/modulesJs")
-
-
-
-
-        @*<!--new scripts-->
-            <!--<script src="~/Scripts/comments/jquery-2.1.3.min.js"></script>-->
-             <script src="~/Scripts/comments/owl.carousel.min.js"></script>
-             <script src="~/Scripts/comments/custom.js"></script>
-             <!--end new scripts-->*@
-
-        <!--new scripts-->
-        <link href="~/Scripts/js-image-slider.css" rel="stylesheet" type="text/css" />
-        <script src="~/Scripts/mcVideoPlugin.js" type="text/javascript"></script>
-        <script src="~/Scripts/js-image-slider.js" type="text/javascript"></script>
-        <link href="~/Scripts/generic.css" rel="stylesheet" type="text/css" />
-        <!--end new scripts-->
-
-
-
-
-
-
-
-
-
-
-
-
+    
         <script type="text/javascript">
             Share = {
                 vkontakte: function (e, purl, ptitle, pimg, text) {
