--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
@@ -317,7 +317,7 @@
                 {
                     <tr>
                         <td>Сдача в эксплуатацию:</td>
-                        <td>@Html.DropDownListFor(m => m.ExpluatationDateId, new SelectList(ViewBag.ExpluatationDates, "Id", "Name"))</td>
+                        <td>@Html.DropDownListFor(m => m.ExpluatationDateId, new SelectList(ViewBag.ExpluatationDates, "Id", "Year"))</td>
                     </tr>
                 }
 
