--- a/ReHouse.FrontEnd/Scripts/js-image-slider.css
+++ b/ReHouse.FrontEnd/Scripts/js-image-slider.css
@@ -130,7 +130,7 @@ element.style {
     width:100%;height:702px;
 }
 #slider .video {
-    background:transparent url(video.png) no-repeat 50% 50%;
+    background:transparent url('../Scripts/video.png') no-repeat 50% 50%;
 }
 
 /* ------ built-in navigation bullets wrapper ------*/
@@ -147,7 +147,7 @@ element.style {
 {
     width:11px; height:11px;
     font-size:0;color:White;/*hide the index number in the bullet element*/
-    background:transparent url(bullet.png) no-repeat 0 0;
+    background:transparent url('../Scripts/bullet.png') no-repeat 0 0;
     display:inline-block; *display:inline; zoom:1;
     overflow:hidden;cursor:pointer;
     margin:0 6px;/* set distance between each bullet*/
