--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -149,7 +149,7 @@
     <div class="right">
         @if (Model.Advert.IsExclusive)
         {
-            <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
+            <div class="redimg"><img src="~/Content/images/eksklusiv.jpg"></div>
         }
         else if (Model.Advert.IsHot)
         {
