--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Slider/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Slider/Edit.cshtml
@@ -5,7 +5,11 @@
     Layout = "~/Areas/Cabinet/Views/Shared/_Layout.cshtml";
 }
 @Html.Partial("_navigation", "slider")
-
+<style>
+    .added table tr td {
+        padding: 0;
+    }
+</style>
 <div id="adminka2" class="tabset_content">
     <div class="headline">
         <h2>Настройка слайдера</h2>
